# libraryproject_1

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: FetchMiniz.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/libraryproject/: libraryproject.hpp
test/: CMakeLists.txt
test/source/: libraryproject_test.cpp
